--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
-    <link rel="stylesheet" href="Style.css">
+    <link href="Style.css" rel="stylesheet" >
     <a href="./Materia.html"></a>
     <title>Escassez de Proffisonais de TI no mercado Brasileiro</title>
 </head>
