--- a/Materia.html
+++ b/Materia.html
@@ -15,7 +15,7 @@
              <!-- nav -->
               <nav>   
              <div class="logo">
-             <a href="LandingPage.html"> <img src="logo.jpg" style="vertical-align: left;"></a>
+             <a href="Index.html"> <img src="logo.jpg" style="vertical-align: left;"></a>
              </div>
              <button>noticias</button>
         </nav>
