--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <!-- nav -->
         <nav>
             <div class="logo">
-                <a href="LandingPage.html"> <img src="logo.jpg" alt="Logo empresa"> </a>
+                <a href="Index.html"> <img src="logo.jpg" alt="Logo empresa"> </a>
             </div>
             <button>Fale Conosco</button>
         </nav>
